{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 16,
  "lineage": "37eee840-c93d-2397-c716-128709bac576",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dream_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:440744217738:instance/i-074548ce62d8ac0f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-cloudwatch-profile",
            "id": "i-074548ce62d8ac0f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dream-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f75fb8330779108",
            "private_dns": "ip-10-0-1-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-18-215-118-44.compute-1.amazonaws.com",
            "public_ip": "18.215.118.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053079f6d37b87abf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077acd517267ed4fe",
            "tags": {
              "Name": "dream-instance"
            },
            "tags_all": {
              "Name": "dream-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1bc954c1ed6bb75"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_cloudwatch_role",
            "aws_key_pair.dream_key",
            "aws_security_group.dream_sg",
            "aws_subnet.dream_subnet",
            "aws_vpc.dream_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dream_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744217738:internet-gateway/igw-05f448f42a4cd195f",
            "id": "igw-05f448f42a4cd195f",
            "owner_id": "440744217738",
            "tags": {
              "Name": "dream-igw"
            },
            "tags_all": {
              "Name": "dream-igw"
            },
            "vpc_id": "vpc-0cf3435a433453b91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dream_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744217738:route-table/rtb-080e8c1751751edc9",
            "id": "rtb-080e8c1751751edc9",
            "owner_id": "440744217738",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f448f42a4cd195f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dream-rt"
            },
            "tags_all": {
              "Name": "dream-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf3435a433453b91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dream_igw",
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dream_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dbe69adf562792a",
            "route_table_id": "rtb-080e8c1751751edc9",
            "subnet_id": "subnet-077acd517267ed4fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dream_igw",
            "aws_route_table.dream_rt",
            "aws_subnet.dream_subnet",
            "aws_vpc.dream_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dream_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744217738:security-group/sg-0a1bc954c1ed6bb75",
            "description": "Security group for Dream Vacation App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1bc954c1ed6bb75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dream-security-group",
            "name_prefix": "",
            "owner_id": "440744217738",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dream-sg"
            },
            "tags_all": {
              "Name": "dream-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf3435a433453b91"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dream_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744217738:subnet/subnet-077acd517267ed4fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077acd517267ed4fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440744217738",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dream-subnet"
            },
            "tags_all": {
              "Name": "dream-subnet"
            },
            "vpc_id": "vpc-0cf3435a433453b91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dream_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dream_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:440744217738:vpc/vpc-0cf3435a433453b91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057feffecf50e6f7c",
            "default_route_table_id": "rtb-02512f242d271bade",
            "default_security_group_id": "sg-0c02c2656dd40582a",
            "dhcp_options_id": "dopt-0440d3ad7382d8592",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf3435a433453b91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02512f242d271bade",
            "owner_id": "440744217738",
            "tags": {
              "Name": "dream-vpc"
            },
            "tags_all": {
              "Name": "dream-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}